# email-automation

./: .env.example  .gitignore  README.md  README1.md  README2.md  auth.py  auth_gmail.py  email_service.py  original script.txt  pyproject.toml  requirements.txt  run.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  LOGGING.md  OVERVIEW.md  REAL_WORLD_USAGE.md  WORKFLOW.md
docs/examples/: Fw 100 Remote role Technical Engineer needed.docx  Fw 100 Remote role Technical Engineer needed.txt  Fw 100 Remote role Technical Engineer needed_ERROR.txt
src/: __main__.py  auth_gmail.py  config.py  email_service.py  error_handler.py  gmail_client.py  logging_config.py  processor.py  run.py  send_batch.py  text_exporter.py  text_filter.py  utils.py  word_exporter.py  zip_service.py
src/utils/: batch_utils.py  date_utils.py  error_utils.py
