[project]
name = "email-automation"
version = "0.1.0"
description = "Gmail to document automation pipeline"
authors = [
    { name = "Dominick Benigno" }
]
requires-python = ">=3.10"

dependencies = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "python-docx",
    "python-dotenv"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]